# vamposer

./: .gitignore  Makefile  NOTICE  README.md  SECURITY.md  action.yml  bootstrap-template.sh  codecov.yml  init-local-vapi.sh  init.sh  meson.build  meson.options  vamposer.aliases.json  vamposer.build  vamposer.json  vamposer.json.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: add-package-alias.md
.github/workflows/: action-smoke.yml  aur-release.yml  ci.yml  copr-release.yml  coverage.yml  release.yml  template-bootstrap.yml
completions/: _vamposer  vamposer.bash
packaging/flatpak/: io.github.valafoundation.vamposer.metainfo.xml
src/: command_runner.vala  completion_installer.vala  config.vala  console_style.vala  dependency_resolver.vala  installer.vala  library.vala  logger.vala  main.vala  meson.build  system_dependency_installer.vala  version_info.vala.in
src/commands/: command.vala  completion_command.vala  help_command.vala  init_command.vala  install_command.vala  meson.build  remove_command.vala  require_command.vala  self_upgrade_command.vala  update_command.vala  version_command.vala
src/installer_operations/: init_operation.vala  install_operation.vala  meson.build  remove_operation.vala  require_operation.vala  self_upgrade_operation.vala  update_operation.vala
src/package_managers/: apk_package_manager.vala  apt_package_manager.vala  base_system_package_manager.vala  dnf_package_manager.vala  flatpak_package_manager.vala  meson.build  pacman_package_manager.vala  system_package_manager.vala  windows_package_manager.vala  yum_package_manager.vala  zypper_package_manager.vala
subprojects/: vamposer.build
subprojects/vamposer/: meson.build
tests/: commands_test.vala  config_test.vala  console_style_test.vala  example_test.vala  installer_error_test.vala  installer_test.vala  logger_test.vala  main.vala  meson.build  resolver_test.vala  system_dependency_installer_test.vala
vamposer/: meson.build
