package_manager_sources = files(
  'system_package_manager.vala',
  'base_system_package_manager.vala',
  'apt_package_manager.vala',
  'dnf_package_manager.vala',
  'yum_package_manager.vala',
  'pacman_package_manager.vala',
  'zypper_package_manager.vala',
  'apk_package_manager.vala',
  'flatpak_package_manager.vala',
  'windows_package_manager.vala',
)
